--- a/pom.xml
+++ b/pom.xml
@@ -73,11 +73,11 @@
 			<version>5.0.2.Final</version>
 		</dependency>
 
-		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc6</artifactId>
-			<version>11.2.0</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.oracle</groupId>-->
+			<!--<artifactId>ojdbc6</artifactId>-->
+			<!--<version>11.2.0</version>-->
+		<!--</dependency>-->
 	</dependencies>
 	
 	<build>
