--- a/pom.xml
+++ b/pom.xml
@@ -24,12 +24,14 @@
 		<start-class>com.example.DemoApplication</start-class>
 		<tomcat.version>8.0.9</tomcat.version>
 	</properties>
+
     <repositories>
         <repository>
             <id>my-local-repo</id>
             <url>file://${basedir}/lib</url>
         </repository>
     </repositories>
+
 	<dependencies>
 		<!--<dependency>-->
 			<!--<groupId>org.springframework.boot</groupId>-->
@@ -43,10 +45,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.session</groupId>
-			<artifactId>spring-session</artifactId>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.springframework.session</groupId>-->
+			<!--<artifactId>spring-session</artifactId>-->
+		<!--</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -73,11 +75,11 @@
 			<version>5.0.2.Final</version>
 		</dependency>
 
-		<!--<dependency>-->
-			<!--<groupId>com.oracle</groupId>-->
-			<!--<artifactId>ojdbc6</artifactId>-->
-			<!--<version>11.2.0</version>-->
-		<!--</dependency>-->
+		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc6</artifactId>
+			<version>11.2.0</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
