--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>demo</name>
-	<description>Demo project for Spring Boot</description>
+	<name>DMS</name>
+	<description>NWT Document Managment System</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -87,6 +87,12 @@
 			<groupId>com.oracle</groupId>
 			<artifactId>ojdbc6</artifactId>
 			<version>11.2.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>nz.net.ultraq.thymeleaf</groupId>
+			<artifactId>thymeleaf-layout-dialect</artifactId>
+			<version>1.2.1</version>
 		</dependency>
 	</dependencies>
 	
