--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,31 @@
 server.port = 8181
 
+my.url = http://localhost:8181
+my.mail.sender = auto@nwt.grozoly.com
+#my.url = nwt-grozoly.rhcloud.com
+#my.url = http://nwt-arandombox.rhcloud.com
+
 spring.data.rest.base-path=/api
 spring.data.rest.default-page-size=5
 spring.data.rest.max-page-size=20
+
+
+# Email (MailProperties)
+spring.mail.host=
+spring.mail.port=
+spring.mail.username=
+spring.mail.password=
+spring.mail.default-encoding=UTF-8
+#spring.mail.properties.smtp.starttls.enable=true
+#spring.mail.properties.smtp.auth=true
+#spring.mail.properties.ssl.trust=smtp.mailgun.org
+
+#h2 postavke
+spring.datasource.url=jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
 #spring.datasource.url=
@@ -18,4 +41,5 @@ spring.data.rest.max-page-size=20
 #spring.datasource.idleTimeout=30000
 #spring.datasource.pool-prepared-statements=true
 #spring.datasource.max-open-prepared-statements=250
+
 
