--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.example</groupId>
@@ -26,12 +26,12 @@
 		<wro4j.version>1.7.6</wro4j.version>
 	</properties>
 
-    <repositories>
-        <repository>
-            <id>my-local-repo</id>
-            <url>file://${basedir}/lib</url>
-        </repository>
-    </repositories>
+	<repositories>
+		<repository>
+			<id>my-local-repo</id>
+			<url>file://${basedir}/lib</url>
+		</repository>
+	</repositories>
 
 	<dependencies>
 		<dependency>
@@ -47,16 +47,16 @@
 			<artifactId>h2</artifactId>
 		</dependency>
 		<!--<dependency>-->
-			<!--<groupId>org.springframework.boot</groupId>-->
-			<!--<artifactId>spring-boot-devtools</artifactId>-->
+		<!--<groupId>org.springframework.boot</groupId>-->
+		<!--<artifactId>spring-boot-devtools</artifactId>-->
 		<!--</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		<!--<dependency>-->
-			<!--<groupId>org.springframework.session</groupId>-->
-			<!--<artifactId>spring-session</artifactId>-->
+		<!--<groupId>org.springframework.session</groupId>-->
+		<!--<artifactId>spring-session</artifactId>-->
 		<!--</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -98,21 +98,30 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.passay</groupId>
+			<artifactId>passay</artifactId>
+			<version>1.0</version>
+		</dependency>
 		<!--<dependency>-->
-			<!--<groupId>org.apache.httpcomponents</groupId>-->
-			<!--<artifactId>httpclient</artifactId>-->
-			<!--<scope>test</scope>-->
+		<!--<groupId>org.apache.httpcomponents</groupId>-->
+		<!--<artifactId>httpclient</artifactId>-->
+		<!--<scope>test</scope>-->
 		<!--</dependency>-->
 	</dependencies>
 
 	<build>
 		<!--<resources>-->
-			<!--<resource>-->
-				<!--<directory>${project.basedir}/src/main/resources</directory>-->
-			<!--</resource>-->
-			<!--<resource>-->
-				<!--<directory>${project.build.directory}/generated-resources</directory>-->
-			<!--</resource>-->
+		<!--<resource>-->
+		<!--<directory>${project.basedir}/src/main/resources</directory>-->
+		<!--</resource>-->
+		<!--<resource>-->
+		<!--<directory>${project.build.directory}/generated-resources</directory>-->
+		<!--</resource>-->
 		<!--</resources>-->
 		<plugins>
 			<plugin>
@@ -120,68 +129,68 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 			<!--<plugin>-->
-				<!--<artifactId>maven-resources-plugin</artifactId>-->
-				<!--<executions>-->
-					<!--<execution>-->
-						<!--&lt;!&ndash; Serves *only* to filter the wro.xml so it can get an absolute-->
-							<!--path for the project &ndash;&gt;-->
-						<!--<id>copy-resources</id>-->
-						<!--<phase>validate</phase>-->
-						<!--<goals>-->
-							<!--<goal>copy-resources</goal>-->
-						<!--</goals>-->
-						<!--<configuration>-->
-							<!--<outputDirectory>${basedir}/target/wro</outputDirectory>-->
-							<!--<resources>-->
-								<!--<resource>-->
-									<!--<directory>src/main/wro</directory>-->
-									<!--<filtering>true</filtering>-->
-								<!--</resource>-->
-							<!--</resources>-->
-						<!--</configuration>-->
-					<!--</execution>-->
-				<!--</executions>-->
+			<!--<artifactId>maven-resources-plugin</artifactId>-->
+			<!--<executions>-->
+			<!--<execution>-->
+			<!--&lt;!&ndash; Serves *only* to filter the wro.xml so it can get an absolute-->
+			<!--path for the project &ndash;&gt;-->
+			<!--<id>copy-resources</id>-->
+			<!--<phase>validate</phase>-->
+			<!--<goals>-->
+			<!--<goal>copy-resources</goal>-->
+			<!--</goals>-->
+			<!--<configuration>-->
+			<!--<outputDirectory>${basedir}/target/wro</outputDirectory>-->
+			<!--<resources>-->
+			<!--<resource>-->
+			<!--<directory>src/main/wro</directory>-->
+			<!--<filtering>true</filtering>-->
+			<!--</resource>-->
+			<!--</resources>-->
+			<!--</configuration>-->
+			<!--</execution>-->
+			<!--</executions>-->
 			<!--</plugin>-->
 			<!--<plugin>-->
-				<!--<groupId>ro.isdc.wro4j</groupId>-->
-				<!--<artifactId>wro4j-maven-plugin</artifactId>-->
-				<!--<version>${wro4j.version}</version>-->
-				<!--<executions>-->
-					<!--<execution>-->
-						<!--<phase>generate-resources</phase>-->
-						<!--<goals>-->
-							<!--<goal>run</goal>-->
-						<!--</goals>-->
-					<!--</execution>-->
-				<!--</executions>-->
-				<!--<configuration>-->
-					<!--<wroManagerFactory>ro.isdc.wro.maven.plugin.manager.factory.ConfigurableWroManagerFactory</wroManagerFactory>-->
-					<!--<cssDestinationFolder>${project.build.directory}/generated-resources/static/css</cssDestinationFolder>-->
-					<!--<jsDestinationFolder>${project.build.directory}/generated-resources/static/js</jsDestinationFolder>-->
-					<!--<wroFile>${project.build.directory}/wro/wro.xml</wroFile>-->
-					<!--<extraConfigFile>${basedir}/src/main/wro/wro.properties</extraConfigFile>-->
-					<!--<contextFolder>${basedir}/src/main/wro</contextFolder>-->
-				<!--</configuration>-->
-				<!--<dependencies>-->
-					<!--<dependency>-->
-						<!--<groupId>org.webjars</groupId>-->
-						<!--<artifactId>jquery</artifactId>-->
-						<!--<version>2.1.1</version>-->
-					<!--</dependency>-->
-					<!--<dependency>-->
-						<!--<groupId>org.webjars</groupId>-->
-						<!--<artifactId>angularjs</artifactId>-->
-						<!--<version>1.3.8</version>-->
-					<!--</dependency>-->
-					<!--<dependency>-->
-						<!--<groupId>org.webjars</groupId>-->
-						<!--<artifactId>bootstrap</artifactId>-->
-						<!--<version>3.2.0</version>-->
-					<!--</dependency>-->
-				<!--</dependencies>-->
+			<!--<groupId>ro.isdc.wro4j</groupId>-->
+			<!--<artifactId>wro4j-maven-plugin</artifactId>-->
+			<!--<version>${wro4j.version}</version>-->
+			<!--<executions>-->
+			<!--<execution>-->
+			<!--<phase>generate-resources</phase>-->
+			<!--<goals>-->
+			<!--<goal>run</goal>-->
+			<!--</goals>-->
+			<!--</execution>-->
+			<!--</executions>-->
+			<!--<configuration>-->
+			<!--<wroManagerFactory>ro.isdc.wro.maven.plugin.manager.factory.ConfigurableWroManagerFactory</wroManagerFactory>-->
+			<!--<cssDestinationFolder>${project.build.directory}/generated-resources/static/css</cssDestinationFolder>-->
+			<!--<jsDestinationFolder>${project.build.directory}/generated-resources/static/js</jsDestinationFolder>-->
+			<!--<wroFile>${project.build.directory}/wro/wro.xml</wroFile>-->
+			<!--<extraConfigFile>${basedir}/src/main/wro/wro.properties</extraConfigFile>-->
+			<!--<contextFolder>${basedir}/src/main/wro</contextFolder>-->
+			<!--</configuration>-->
+			<!--<dependencies>-->
+			<!--<dependency>-->
+			<!--<groupId>org.webjars</groupId>-->
+			<!--<artifactId>jquery</artifactId>-->
+			<!--<version>2.1.1</version>-->
+			<!--</dependency>-->
+			<!--<dependency>-->
+			<!--<groupId>org.webjars</groupId>-->
+			<!--<artifactId>angularjs</artifactId>-->
+			<!--<version>1.3.8</version>-->
+			<!--</dependency>-->
+			<!--<dependency>-->
+			<!--<groupId>org.webjars</groupId>-->
+			<!--<artifactId>bootstrap</artifactId>-->
+			<!--<version>3.2.0</version>-->
+			<!--</dependency>-->
+			<!--</dependencies>-->
 			<!--</plugin>-->
 		</plugins>
 	</build>
-	
+
 
 </project>
