reset password via mail

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.port = 8181
 
 my.url = http://localhost:8181
 my.mail.sender = auto@nwt.grozoly.com
+my.token.trajanje = 24
 #my.url = nwt-grozoly.rhcloud.com
 #my.url = http://nwt-arandombox.rhcloud.com
 
