hrpa skripti, pocetni sql za h2 sa korisnikom huma/huma i 2 akcije

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.mail.host=
 spring.mail.port=
 spring.mail.username=
 spring.mail.password=
-spring.mail.default-encoding=UTF-8
+spring.mail.default-encoding=
 #spring.mail.properties.smtp.starttls.enable=true
 #spring.mail.properties.smtp.auth=true
 #spring.mail.properties.ssl.trust=smtp.mailgun.org
@@ -27,11 +27,13 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.initialize=true
 
 
 #spring.datasource.url=
 #spring.datasource.username=
 #spring.datasource.password=
+#spring.datasource.initialize=false
 #spring.datasource.max-wait=10000
 #spring.datasource.max-idle=5
 #spring.datasource.initial-size=5
@@ -42,5 +44,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.datasource.idleTimeout=30000
 #spring.datasource.pool-prepared-statements=true
 #spring.datasource.max-open-prepared-statements=250
+
 
 
