--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,10 @@
 			<artifactId>passay</artifactId>
 			<version>1.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+		</dependency>
 		<!--<dependency>-->
 		<!--<groupId>org.apache.httpcomponents</groupId>-->
 		<!--<artifactId>httpclient</artifactId>-->
