--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,35 +1,19 @@
-server.port = 8181
-
 my.url = http://localhost:8181
 my.mail.sender = auto@nwt.grozoly.com
 my.token.trajanje = 24
-#my.url = nwt-grozoly.rhcloud.com
-#my.url = http://nwt-arandombox.rhcloud.com
 
-spring.data.rest.base-path=/api
-spring.data.rest.default-page-size=5
-spring.data.rest.max-page-size=20
-
+recaptcha.url=https://www.google.com/recaptcha/api/siteverify
+recaptcha.site-key=
+recaptcha.secret-key=
 
 # Email (MailProperties)
 spring.mail.host=
 spring.mail.port=
 spring.mail.username=
 spring.mail.password=
-spring.mail.default-encoding=
-#spring.mail.properties.smtp.starttls.enable=true
-#spring.mail.properties.smtp.auth=true
-#spring.mail.properties.ssl.trust=smtp.mailgun.org
+spring.mail.default-encoding=UTF-8
 
-#h2 postavke
-spring.datasource.url=jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.initialize=true
-
-
+#oracle
 #spring.datasource.url=
 #spring.datasource.username=
 #spring.datasource.password=
@@ -45,5 +29,20 @@ spring.datasource.initialize=true
 #spring.datasource.pool-prepared-statements=true
 #spring.datasource.max-open-prepared-statements=250
 
+#h2 postavke
+spring.datasource.url=jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.initialize=true
 
+spring.data.rest.base-path=/api
+spring.data.rest.default-page-size=5
+spring.data.rest.max-page-size=20
+
+server.port = 8181
+
+server.tomcat.remote_ip_header=x-forwarded-for
+server.tomcat.protocol_header=x-forwarded-proto
 
