--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,14 +3,14 @@ my.mail.sender = auto@nwt.grozoly.com
 my.token.trajanje = 24 #ne radi, vrijednost zakucana u tokenima
 
 recaptcha.url=https://www.google.com/recaptcha/api/siteverify
-recaptcha.site-key=
-recaptcha.secret-key=
+recaptcha.site-key=6LeH5CATAAAAAI-do8BItc6h-ogHc4kgJTJ2eye5
+recaptcha.secret-key=6LeH5CATAAAAADbKlm5SbijONgSdZcmKxfTm-ERt
 
 # Email (MailProperties)
 spring.mail.host=smtp.mailgun.org
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
+spring.mail.username=nwt2@sandbox94a48751df954aab91b6e141f115c20f.mailgun.org
+spring.mail.password=NWTnwt
 spring.mail.default-encoding=UTF-8
 
 #oracle
