--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,3 +46,5 @@ server.port = 8181
 server.tomcat.remote_ip_header=x-forwarded-for
 server.tomcat.protocol_header=x-forwarded-proto
 
+endpoints.enabled=false
+endpoints.metrics.enabled=true
