--- a/pom.xml
+++ b/pom.xml
@@ -80,10 +80,10 @@
 			<!--<artifactId>spring-data-rest-hal-browser</artifactId>-->
 		<!--</dependency>-->
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.springframework.boot</groupId>-->
+			<!--<artifactId>spring-boot-starter-web</artifactId>-->
+		<!--</dependency>-->
 		<!--<dependency>-->
 			<!--<groupId>com.oracle</groupId>-->
 			<!--<artifactId>ojdbc6</artifactId>-->
