--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,7 +41,7 @@ spring.data.rest.base-path=/api
 spring.data.rest.default-page-size=5
 spring.data.rest.max-page-size=20
 
-server.port = 8181
+#server.port = 8181
 
 server.tomcat.remote_ip_header=x-forwarded-for
 server.tomcat.protocol_header=x-forwarded-proto
