test deploy kroz intelij

--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -1,3 +1,9 @@
 my.url = http://nwt-grozoly.rhcloud.com
 
-#spring.datasource.initialize=false
+spring.datasource.initialize=true
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:postgresql://${$OPENSHIFT_POSTGRESQL_DB_HOST}:${$OPENSHIFT_POSTGRESQL_DB_PORT}/diy
+spring.datasource.username=${$OPENSHIFT_POSTGRESQL_DB_USERNAME}
+spring.datasource.password=${$OPENSHIFT_POSTGRESQL_DB_PASSWORD}
