--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -1,6 +1,6 @@
 my.url = http://nwt-grozoly.rhcloud.com
 
-spring.datasource.initialize=true
+spring.datasource.initialize=false
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
