--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -1,8 +1,8 @@
 my.url = http://nwt-grozoly.rhcloud.com
 
-spring.datasource.initialize=false
+spring.datasource.initialize=true
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.datasource.url=jdbc:postgresql://${$OPENSHIFT_POSTGRESQL_DB_HOST}:${$OPENSHIFT_POSTGRESQL_DB_PORT}/nwt
 spring.datasource.username=${$OPENSHIFT_POSTGRESQL_DB_USERNAME}
