--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,11 +50,11 @@ endpoints.enabled=false
 endpoints.metrics.enabled=true
 
 #postgrSQL
-#spring.jpa.database=POSTGRESQL
-#spring.datasource.platform=postgres
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=create
-#spring.database.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:9999/diy
-#spring.datasource.username=user
-#spring.datasource.password=user
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.database.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:9999/diy
+spring.datasource.username=user
+spring.datasource.password=user
