--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,12 +30,12 @@ spring.mail.default-encoding=UTF-8
 #spring.datasource.max-open-prepared-statements=250
 
 #h2 postavke
-#spring.datasource.url=jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-#spring.datasource.initialize=true
+spring.datasource.url=jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.initialize=true
 
 spring.data.rest.base-path=/api
 spring.data.rest.default-page-size=5
@@ -50,11 +50,11 @@ endpoints.enabled=false
 endpoints.metrics.enabled=true
 
 #postgrSQL
-spring.jpa.database=POSTGRESQL
-spring.datasource.platform=postgres
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
-spring.database.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:9999/diy
-spring.datasource.username=user
-spring.datasource.password=user
+#spring.jpa.database=POSTGRESQL
+#spring.datasource.platform=postgres
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create
+#spring.database.driverClassName=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:9999/diy
+#spring.datasource.username=user
+#spring.datasource.password=user
