--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -1,9 +1,12 @@
 my.url = http://nwt-grozoly.rhcloud.com
 
-#spring.datasource.initialize=true
-#spring.jpa.show-sql=false
-#spring.jpa.hibernate.ddl-auto=create
-#
-#spring.datasource.url=jdbc:postgresql://${$OPENSHIFT_POSTGRESQL_DB_HOST}:${$OPENSHIFT_POSTGRESQL_DB_PORT}/nwt
-#spring.datasource.username=${$OPENSHIFT_POSTGRESQL_DB_USERNAME}
-#spring.datasource.password=${$OPENSHIFT_POSTGRESQL_DB_PASSWORD}
+spring.datasource.initialize=true
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+
+spring.datasource.url=jdbc:postgresql://${$OPENSHIFT_POSTGRESQL_DB_HOST}:${$OPENSHIFT_POSTGRESQL_DB_PORT}/nwt
+spring.datasource.username=${$OPENSHIFT_POSTGRESQL_DB_USERNAME}
+spring.datasource.password=${$OPENSHIFT_POSTGRESQL_DB_PASSWORD}
