--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -10,3 +10,27 @@ spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://${$OPENSHIFT_POSTGRESQL_DB_HOST}:${$OPENSHIFT_POSTGRESQL_DB_PORT}/nwt
 spring.datasource.username=${$OPENSHIFT_POSTGRESQL_DB_USERNAME}
 spring.datasource.password=${$OPENSHIFT_POSTGRESQL_DB_PASSWORD}
+
+my.mail.sender = auto@nwt.grozoly.com
+my.token.trajanje = 24 #ne radi, vrijednost zakucana u tokenima
+
+recaptcha.url=https://www.google.com/recaptcha/api/siteverify
+recaptcha.site-key=
+recaptcha.secret-key=
+
+# Email (MailProperties)
+spring.mail.host=smtp.mailgun.org
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=
+spring.mail.default-encoding=UTF-8
+
+spring.data.rest.base-path=/api
+spring.data.rest.default-page-size=5
+spring.data.rest.max-page-size=20
+
+server.tomcat.remote_ip_header=x-forwarded-for
+server.tomcat.protocol_header=x-forwarded-proto
+
+endpoints.enabled=false
+endpoints.metrics.enabled=true
