--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -8,9 +8,9 @@ spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 
 #
-spring.datasource.url=${$OPENSHIFT_POSTGRESQL_DB_HOST}:${$OPENSHIFT_POSTGRESQL_DB_PORT}/"nwt"
-spring.datasource.username=${$OPENSHIFT_POSTGRESQL_DB_USERNAME}
-spring.datasource.password=${$OPENSHIFT_POSTGRESQL_DB_PASSWORD}
+#spring.datasource.url=${$OPENSHIFT_POSTGRESQL_DB_HOST}:${$OPENSHIFT_POSTGRESQL_DB_PORT}/"nwt"
+#spring.datasource.username=${$OPENSHIFT_POSTGRESQL_DB_USERNAME}
+#spring.datasource.password=${$OPENSHIFT_POSTGRESQL_DB_PASSWORD}
 
 my.mail.sender = auto@nwt.grozoly.com
 my.token.trajanje = 24 #ne radi, vrijednost zakucana u tokenima
