--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -1,4 +1,9 @@
 my.url = http://nwt-grozoly.rhcloud.com
+#my.db.host = $OPENSHIFT_POSTGRESQL_DB_HOST
+#my.db.port = $OPENSHIFT_POSTGRESQL_DB_PORT
+#my.db.db = nwt
+#my.db.user = user
+#my.db.password = user
 
 spring.datasource.initialize=false
 spring.jpa.show-sql=false
@@ -6,11 +11,9 @@ spring.jpa.hibernate.ddl-auto=validate
 
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-
-#
-#spring.datasource.url=${$OPENSHIFT_POSTGRESQL_DB_HOST}:${$OPENSHIFT_POSTGRESQL_DB_PORT}/"nwt"
-#spring.datasource.username=${$OPENSHIFT_POSTGRESQL_DB_USERNAME}
-#spring.datasource.password=${$OPENSHIFT_POSTGRESQL_DB_PASSWORD}
+spring.datasource.url=${OPENSHIFT_POSTGRESQL_DB_HOST}:${OPENSHIFT_POSTGRESQL_DB_PORT}/"nwt"
+spring.datasource.username=${OPENSHIFT_POSTGRESQL_DB_USERNAME}
+spring.datasource.password=${OPENSHIFT_POSTGRESQL_DB_PASSWORD}
 
 my.mail.sender = auto@nwt.grozoly.com
 my.token.trajanje = 24 #ne radi, vrijednost zakucana u tokenima
