--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,12 +49,18 @@ server.tomcat.protocol_header=x-forwarded-proto
 endpoints.enabled=false
 endpoints.metrics.enabled=true
 
+my.db.host = 127.0.0.1
+my.db.port = 9999
+my.db.db = nwt
+my.db.user = user
+my.db.password = user
+
 #postgrSQL
 #spring.jpa.database=POSTGRESQL
 #spring.datasource.platform=postgres
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create
 #spring.database.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/nwt
+#spring.datasource.url=127.0.0.1:9999/diy
 #spring.datasource.username=adminubwandk
 #spring.datasource.password=71Pg7NwAPsMe
