--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,13 +29,13 @@ spring.mail.default-encoding=UTF-8
 #spring.datasource.pool-prepared-statements=true
 #spring.datasource.max-open-prepared-statements=250
 
-#h2 postavke
-spring.datasource.url=jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.datasource.initialize=true
+##h2 postavke
+#spring.datasource.url=jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.initialize=true
 
 spring.data.rest.base-path=/api
 spring.data.rest.default-page-size=5
@@ -49,18 +49,16 @@ server.tomcat.protocol_header=x-forwarded-proto
 endpoints.enabled=false
 endpoints.metrics.enabled=true
 
-my.db.host = 127.0.0.1
-my.db.port = 9999
-my.db.db = nwt
-my.db.user = user
-my.db.password = user
+#my.db.host = 127.0.0.1
+#my.db.port = 9999
+#my.db.db = nwt
+#my.db.user = user
+#my.db.password = user
 
 #postgrSQL
-#spring.jpa.database=POSTGRESQL
-#spring.datasource.platform=postgres
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=create
-#spring.database.driverClassName=org.postgresql.Driver
-#spring.datasource.url=127.0.0.1:9999/diy
-#spring.datasource.username=adminubwandk
-#spring.datasource.password=71Pg7NwAPsMe
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.database.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/nwt
