--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ spring.mail.default-encoding=UTF-8
 #spring.datasource.pool-prepared-statements=true
 #spring.datasource.max-open-prepared-statements=250
 
-##h2 postavke
+#h2 postavke
 #spring.datasource.url=jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.username=sa
@@ -56,9 +56,15 @@ endpoints.metrics.enabled=true
 #my.db.password = user
 
 #postgrSQL
+#spring.jpa.database=POSTGRESQL
+#spring.datasource.platform=postgres
+#spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create
+#spring.database.driverClassName=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/nwt
+
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
-spring.database.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/nwt
+spring.datasource.url=jdbc:postgresql://${OPENSHIFT_POSTGRESQL_DB_HOST}:${OPENSHIFT_POSTGRESQL_DB_PORT}/"nwt"
+spring.datasource.username=${OPENSHIFT_POSTGRESQL_DB_USERNAME}
+spring.datasource.password=${OPENSHIFT_POSTGRESQL_DB_PASSWORD}
