--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -65,6 +65,6 @@ endpoints.metrics.enabled=true
 
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://${OPENSHIFT_POSTGRESQL_DB_HOST}:${OPENSHIFT_POSTGRESQL_DB_PORT}/"nwt"
+spring.datasource.url=jdbc:postgresql://${OPENSHIFT_POSTGRESQL_DB_HOST}:${OPENSHIFT_POSTGRESQL_DB_PORT}/nwt
 spring.datasource.username=${OPENSHIFT_POSTGRESQL_DB_USERNAME}
 spring.datasource.password=${OPENSHIFT_POSTGRESQL_DB_PASSWORD}
