--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -4,12 +4,10 @@ spring.datasource.initialize=false
 #spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
 
-spring.jpa.database=POSTGRESQL
-spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://${OPENSHIFT_POSTGRESQL_DB_HOST}:${OPENSHIFT_POSTGRESQL_DB_PORT}/nwt
+spring.datasource.url=jdbc:postgresql://${OPENSHIFT_POSTGRESQL_DB_HOST}:${OPENSHIFT_POSTGRESQL_DB_PORT}/${OPENSHIFT_APP_NAME}
 spring.datasource.username=${OPENSHIFT_POSTGRESQL_DB_USERNAME}
 spring.datasource.password=${OPENSHIFT_POSTGRESQL_DB_PASSWORD}
 
-
+logging.file=${OPENSHIFT_DATA_DIR}/logs/app.log
 
 
