--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -54,7 +54,7 @@ spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
-spring.database.driverClassName=org.postgresql.Driver
+spring.database.driverClassNa=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:9999/diy
 spring.datasource.username=user
 spring.datasource.password=user
