--- a/pom.xml
+++ b/pom.xml
@@ -129,11 +129,11 @@
 		<!--<artifactId>httpclient</artifactId>-->
 		<!--<scope>test</scope>-->
 		<!--</dependency>-->
-		<dependency>
-			<groupId>com.asprise.ocr</groupId>
-			<artifactId>java-ocr-api</artifactId>
-			<version>[15,)</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.asprise.ocr</groupId>-->
+			<!--<artifactId>java-ocr-api</artifactId>-->
+			<!--<version>[15,)</version>-->
+		<!--</dependency>-->
 	</dependencies>
 
 	<build>
