--- a/pom.xml
+++ b/pom.xml
@@ -34,11 +34,11 @@
 	<!--</repositories>-->
 
 	<dependencies>
-		<dependency>
-			<groupId>com.asprise.ocr</groupId>
-			<artifactId>java-ocr-api</artifactId>
-			<version>15.3.0.2</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.asprise.ocr</groupId>-->
+			<!--<artifactId>java-ocr-api</artifactId>-->
+			<!--<version>15.3.0.2</version>-->
+		<!--</dependency>-->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -48,10 +48,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.h2database</groupId>-->
+			<!--<artifactId>h2</artifactId>-->
+		<!--</dependency>-->
 		<!-- http://mvnrepository.com/artifact/org.postgresql/postgresql -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
@@ -129,11 +129,11 @@
 		<!--<artifactId>httpclient</artifactId>-->
 		<!--<scope>test</scope>-->
 		<!--</dependency>-->
-		<!--<dependency>-->
-			<!--<groupId>com.asprise.ocr</groupId>-->
-			<!--<artifactId>java-ocr-api</artifactId>-->
-			<!--<version>[15,)</version>-->
-		<!--</dependency>-->
+		<dependency>
+			<groupId>com.asprise.ocr</groupId>
+			<artifactId>java-ocr-api</artifactId>
+			<version>[15,)</version>
+		</dependency>
 	</dependencies>
 
 	<build>
