--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -4,6 +4,16 @@ spring.datasource.initialize=false
 #spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=validate
 
+
+
+#h2 postavke
+#spring.datasource.url=jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.initialize=true
+
 spring.datasource.url=jdbc:postgresql://${OPENSHIFT_POSTGRESQL_DB_HOST}:${OPENSHIFT_POSTGRESQL_DB_PORT}/${OPENSHIFT_APP_NAME}
 spring.datasource.username=${OPENSHIFT_POSTGRESQL_DB_USERNAME}
 spring.datasource.password=${OPENSHIFT_POSTGRESQL_DB_PASSWORD}
