--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,9 +53,9 @@ endpoints.metrics.enabled=true
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.database.driverClassNa=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:9999/diy
 spring.datasource.username=user
 spring.datasource.password=user
-spring.datasource.initialize=false
+#spring.datasource.initialize=false
