--- a/src/main/resources/application-openshift.properties
+++ b/src/main/resources/application-openshift.properties
@@ -1,8 +1,8 @@
 my.url = http://nwt-grozoly.rhcloud.com
 
-#spring.datasource.initialize=false
+spring.datasource.initialize=false
 #spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 
 
 
